# cppdiycs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ReadMe.md
cmake/: CMakeLists.txt  cppdiycs-config-version.cmake  cppdiycs-config.cmake  cppdiycs-macros.cmake
cmake/scripts/: CMakeLists.txt  cppdiycs.py
src/examples/apps/: CMakeLists.txt
src/examples/apps/transform_csv/: CMakeLists.txt  ReadMe.md  main.cpp  transform_csv.h  transform_csv.py
src/examples/apps/transform_tests/: CMakeLists.txt  main.cpp  main.h  transform_tests.py
src/examples/apps/transform_to_string/: CMakeLists.txt  ReadMe.md  main.cpp  transform_to_string.h  transform_to_string.py
src/examples/apps/transform_xml/: CMakeLists.txt  ReadMe.md  main.cpp  transform_xml.h  transform_xml.py
